# math_practise

./: .gitignore  Cargo.toml  README.md  records.json
src/: functions.rs  lib.rs  main.rs  record.rs
