[package]
name = "math_practice"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
strip = true
debug = false
opt-level = "z"
[dependencies]
rand = "0.8.5"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
rand_derive2 = "0.1.18"
anyhow = "1.0.66"
ansi_term = "0.12.1"
